--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,10 +1,12 @@
 - defaults:
-  link:
-    relink: true
+    link:
+      relink: true
+
+- clean: ['~']
 
 - link:
-  ~/.zshrc: zsh/zshrc
+    ~/.emacs: emacs/emacs
+    ~/.zshrc: zsh/zshrc
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
-
