--- a/tmux.conf
+++ b/tmux.conf
@@ -1,10 +1,17 @@
 unbind C-b
-set -g prefix `
-bind ` send-prefix
+set -g prefix C-a
+bind C-a send-prefix
 
 set -g default-command /usr/bin/zsh
 
 set -g default-terminal 'screen-256color'
+setw -g xterm-keys on
 set -g history-limit 10000
+setw -g aggressive-resize on
+set -g status-keys emacs
 
+set -g mouse on
+
+run-shell "powerline-daemon --quiet"
+source "/home/vaci/.nix-profile/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf"
 
